<resources>
    <string name="app_name">Concordia</string>
    <string name="resgitration_success_text1">Thank you for registering . It may take up to 3 business days to process your application.</string>
    <string name="resgitration_success_text2">You may proceed to login and view the list of token sales available for participation.</string>
    <string name="project_detail_user_status">You are successfully verified</string>
    <string name="amount_tokens_information">By clicking Submit you are bounded to purchase the tokens indicated above.</string>
    <string name="share_information_caption">Earn 3% of whatever your referred friends purchase! As a bonus, you will also earn 1% of your friend\'s referees purchases</string>
    <string name="share_information_description">First 3 top referrals get the new Apple iPhone XR. Promotion ends 31st Dec 2018</string>
    <string name="share_information_example">Our unique two tier referral system will allow you to earn passive income for life. Earn 3% from direct referee and 1% from child referees</string>
    <string name="share_information_example1">You</string>
    <string name="share_information_example6">If A buys $100 worth of tokens, you will earn $3</string>
    <string name="share_information_example7">If C buys $100 worth of tokens, A will earn $3 while You will earn $1</string>
    <string name="got_password_success_information">Your password has been reset and a new password has been sent to you.</string>
    <string name="referral_programme_cven_information">CVEN is the name Concordia Ventures token</string>
    <string name="referral_programme_cven_value">1 CVEN = 1 ETH</string>
    <string name="buy_cven_first_message">Please send ETH to the following smart contract address</string>
    <string name="buy_cven_second_message">You will receive CVEN immediately via smart contract feature.</string>
    <string name="sell_cven_first_message">Please send your CVEN tokens to the address indicated below. Ethereum gas fees apply. ETH will be credited back to the same wallet.</string>
    <string name="cven_dialog_text_1">What is CVEN?</string>
    <string name="cven_dialog_text_2">CVEN is an ERC20 token and a stablecoin used within Concordia Ventures. You can use
    CVEN to purchase projects\' tokens.</string>
    <string name="cven_dialog_text_3">Why Use CVEN?</string>
    <string name="cven_dialog_text_4">If you use CVEN (instead of BTC or ETH) to buy a project\'s tokens, you will receive 1% worth
    of CVEN tokens as a bonus. For example, if you buy 1,000 tokens for 100 CVEN, you will receive 1 CVEN token for free.</string>
    <string name="cven_dialog_text_5">Can I Exchange CVEN back to ETH?</string>
    <string name="cven_dialog_text_6">Yes, since CVEN is our stable coin, you can Sell CVEN back to us at anytime for ETH. We will
    deposit the ETH to your sending CVEN wallet address within one to three business days.</string>
    <string name="cven_dialog_text_7">Are there any other fees for buying or selling CVEN tokens?</string>
    <string name="cven_dialog_text_8">Since CVEN is an ERC20 token, all standard Ethereum blockchain gas fees apply.</string>

    <string name="input_wallet_type_txt">Your %s Wallet:</string>
    <string name="input_wallet_notice_txt">Your %s must be sent from this wallet</string>
    <string name="input_wallet_comment">Please include your email to bank transaction, so we can identify your transaction.</string>

    <string name="project_detail_notice_unverified">Your account is unverified. Please go to Update Passport to verify your account</string>
    <string name="update_passport_waiting_msg">We are in the process of verifying your passport details</string>

    <string name="wallet_list_no_wallet_title">No wallet found</string>
    <string name="wallet_list_no_wallet_msg">You have not added any wallet</string>
    <string name="history_list_no_participate_title">Ooops!</string>
    <string name="history_list_no_participate_msg">You have not participated in any Token sale</string>
    <string name="bonus_list_no_referrer_msg">0 friends signed up using your referral code</string>
</resources>
