<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/white_round_bg"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="CVEN"/>
        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:src="@mipmap/close"
            android:tint="@color/gray2"
            android:background="@drawable/light_gray_circle_res_bg"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_1"
        style="@style/CvenTextTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_2"
        style="@style/CvenTextNormal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_3"
        style="@style/CvenTextTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_4"
        style="@style/CvenTextNormal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_5"
        style="@style/CvenTextTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_6"
        style="@style/CvenTextNormal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_7"
        style="@style/CvenTextTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cven_dialog_text_8"
        style="@style/CvenTextNormal"/>
</LinearLayout>